force-app/main/default/objects/VRT_LogProceso__c/VRT_LogProceso__c.object-meta.xml
<CustomObject>
    <description>Logs de auditoría y trazas de ejecución de procesos de negocio asíncronos o complejos.</description>
    <label>Log de Proceso</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Número de Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Proceso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>