force-app/main/default/objects/VRT_LogProceso__c/fields/VRT_LKP_Rental__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Rental__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alquiler asociado con este log.</description>
    <label>Alquiler</label>
    <referenceTo>VRT_Rental__c</referenceTo>
    <relationshipLabel>Logs de Proceso</relationshipLabel>
    <relationshipName>Logs_de_Proceso</relationshipName>
    <type>Lookup</type>
</CustomField>