force-app/main/default/objects/VRT_LogProceso__c/fields/VRT_SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Status__c</fullName>
    <description>Estado del resultado de la ejecución.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Éxito</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>