force-app/main/default/objects/VRT_LogProceso__c/fields/VRT_TXT_ProcessName__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_ProcessName__c</fullName>
    <description>Nombre del proceso de negocio ejecutado.</description>
    <label>Nombre del Proceso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>